--- a/src/main/resources/fxml/NewReference.fxml
+++ b/src/main/resources/fxml/NewReference.fxml
@@ -2,21 +2,32 @@
 
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Region?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jonydog.refy.controllers.NewReferenceController">
+<AnchorPane prefHeight="532.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jonydog.refy.controllers.NewReferenceController">
    <children>
-      <Group layoutX="90.0" layoutY="87.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+      <Group layoutX="28.0" layoutY="30.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="33.0">
          <children>
-            <TextArea fx:id="titleField" prefHeight="91.0" prefWidth="573.0" promptText="Title" />
-            <TextArea fx:id="authorsField" layoutY="104.0" prefHeight="78.0" prefWidth="573.0" promptText="Authors" />
-            <TextArea fx:id="keywordsField" layoutY="195.0" prefHeight="78.0" prefWidth="573.0" promptText="keyword1 keyword2" />
+            <TextArea fx:id="titleField" layoutY="24.0" prefHeight="71.0" prefWidth="573.0" promptText="Title" />
+            <TextArea fx:id="authorsField" layoutY="121.0" prefHeight="74.0" prefWidth="573.0" promptText="Authors" />
+            <TextArea fx:id="keywordsField" layoutY="222.0" prefHeight="49.0" prefWidth="573.0" promptText="keyword1 keyword2" />
+            <Label layoutY="3.0" text="Title" />
+            <Label layoutX="-3.0" layoutY="203.0" text="Keywords" />
+            <Label layoutX="-3.0" layoutY="104.0" text="Authors" />
+            <TextArea fx:id="observationsField" layoutY="310.0" prefHeight="106.0" prefWidth="573.0" />
+            <Label layoutX="-3.0" layoutY="283.0" text="Observations" />
          </children>
       </Group>
-      <Button fx:id="addButton" layoutX="446.0" layoutY="350.0" mnemonicParsing="false" onAction="#addButtonClicked" prefHeight="27.0" prefWidth="129.0" text="Add" />
-      <Button fx:id="chooseFileButton" layoutX="318.0" layoutY="350.0" mnemonicParsing="false" onAction="#chooseFileButtonClicked" prefHeight="27.0" prefWidth="103.0" text="Choose file" />
-      <Region layoutX="25.0" layoutY="311.0" prefHeight="78.0" prefWidth="280.0" style="-fx-background-color: #DDD;" />
+      <Button fx:id="addButton" layoutX="454.0" layoutY="364.0" mnemonicParsing="false" onAction="#addButtonClicked" prefHeight="78.0" prefWidth="144.0" text="ADD REFERENCE" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="25.0" />
+      <AnchorPane layoutX="34.0" layoutY="687.0" prefHeight="78.0" prefWidth="394.0" style="-fx-background-color: #ddd;" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="25.0">
+         <children>
+            <Button fx:id="chooseFileButton" layoutX="59.0" layoutY="15.0" mnemonicParsing="false" onAction="#chooseFileButtonClicked" prefHeight="78.0" prefWidth="77.0" text="Choose file" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children>
+      </AnchorPane>
+      <Label layoutX="25.0" layoutY="472.0" prefHeight="17.0" prefWidth="37.0" text="Link:" AnchorPane.bottomAnchor="107.0" AnchorPane.leftAnchor="25.0" />
+      <TextField fx:id="linkField" layoutX="59.0" layoutY="468.0" prefHeight="25.0" prefWidth="534.0" AnchorPane.leftAnchor="59.0" AnchorPane.rightAnchor="26.0" />
    </children>
 </AnchorPane>
