--- a/src/main/resources/fxml/SettingsDialog.fxml
+++ b/src/main/resources/fxml/SettingsDialog.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jonydog.refy.controllers.SettingsDialogController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="28.0" prefWidth="107.0" text="Settings" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
@@ -25,13 +24,18 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <TextField fx:id="homeFolderField" prefHeight="26.0" prefWidth="143.0" GridPane.columnIndex="1" />
             <Button mnemonicParsing="false" onAction="#selectFileButtonClicked" prefHeight="26.0" prefWidth="95.0" text="Home folder" />
+            <Button mnemonicParsing="false" onAction="#browserClicked" prefHeight="26.0" prefWidth="95.0" text="Browser" GridPane.rowIndex="1" />
+            <TextField fx:id="browserField" prefHeight="26.0" prefWidth="143.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="pdfReaderField" prefHeight="26.0" prefWidth="143.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" onAction="#pdfReaderClicked" prefHeight="26.0" prefWidth="95.0" text="PDF Reader" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Button layoutX="328.0" layoutY="253.0" mnemonicParsing="false" onAction="#cancelButtonClicked" prefHeight="26.0" prefWidth="51.0" text="Cancel" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
-      <Button layoutX="254.0" layoutY="254.0" mnemonicParsing="false" onAction="#saveButtonClicked" prefHeight="26.0" prefWidth="51.0" text="Save" AnchorPane.rightAnchor="100.0" />
+      <Button layoutX="328.0" layoutY="253.0" mnemonicParsing="false" onAction="#cancelButtonClicked" prefHeight="26.0" prefWidth="70.0" text="Cancel" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+      <Button layoutX="254.0" layoutY="254.0" mnemonicParsing="false" onAction="#saveButtonClicked" prefHeight="26.0" prefWidth="70.0" text="Save" AnchorPane.rightAnchor="100.0" />
    </children>
 </AnchorPane>
