--- a/src/main/resources/fxml/ViewReference.fxml
+++ b/src/main/resources/fxml/ViewReference.fxml
@@ -2,20 +2,31 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jonydog.refy.controllers.ViewReferenceController">
    <children>
-      <Label contentDisplay="CENTER" layoutX="283.0" layoutY="35.0" prefHeight="35.0" prefWidth="500.0" text="title" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0" />
-      <Label layoutX="283.0" layoutY="64.0" text="Authors" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="65.0" />
-      <TableView layoutX="29.0" layoutY="127.0" prefHeight="246.0" prefWidth="550.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="135.0">
-        <columns>
-          <TableColumn prefWidth="549.0" text="Note title" />
-        </columns>
-      </TableView>
-      <Button layoutX="20.0" layoutY="97.0" mnemonicParsing="false" text="View PDF" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="95.0" />
-      <Button fx:id="backButton" layoutX="527.0" layoutY="361.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="25.0" />
+      <Label fx:id="titleLabel" contentDisplay="CENTER" layoutX="283.0" layoutY="35.0" prefHeight="35.0" prefWidth="500.0" text="title" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="authorsLabel" layoutX="283.0" layoutY="64.0" text="Authors" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="80.0">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Button layoutX="509.0" layoutY="175.0" mnemonicParsing="false" onAction="#pdfButton" text="View PDF" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="175.0" />
+      <Button fx:id="backButton" layoutX="533.0" layoutY="25.0" mnemonicParsing="false" onAction="#backButtonClicked" prefHeight="25.0" prefWidth="66.0" text="Back" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0" />
+      <TextArea fx:id="observationsField" layoutX="25.0" layoutY="181.0" prefHeight="144.0" prefWidth="550.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="206.0">
+         <font>
+            <Font size="16.0" />
+         </font></TextArea>
+      <Button fx:id="saveButton" layoutX="502.0" layoutY="361.0" mnemonicParsing="false" onAction="#saveButtonClicked" prefHeight="25.0" prefWidth="66.0" text="Save" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="25.0" />
+      <Label fx:id="keywordsLabel" layoutX="14.0" layoutY="133.0" text="keyrwords" textFill="#3f48e1" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="130.0">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Button layoutX="431.0" layoutY="175.0" mnemonicParsing="false" onAction="#linkButton" prefHeight="25.0" prefWidth="73.0" text="Open link" AnchorPane.rightAnchor="105.0" AnchorPane.topAnchor="175.0" />
    </children>
 </AnchorPane>
