--- a/src/main/resources/fxml/SettingsDialog.fxml
+++ b/src/main/resources/fxml/SettingsDialog.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jonydog.refy.controllers.SettingsDialogController">
+<AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jonydog.refy.controllers.SettingsDialogController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="28.0" prefWidth="107.0" text="Settings" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
          <font>
@@ -29,10 +29,10 @@
          <children>
             <TextField fx:id="homeFolderField" prefHeight="26.0" prefWidth="143.0" GridPane.columnIndex="1" />
             <Button mnemonicParsing="false" onAction="#selectFileButtonClicked" prefHeight="26.0" prefWidth="95.0" text="Home folder" />
-            <Button mnemonicParsing="false" onAction="#browserClicked" prefHeight="26.0" prefWidth="95.0" text="Browser" GridPane.rowIndex="1" />
+            <Button fx:id="browserButton" mnemonicParsing="false" onAction="#browserClicked" prefHeight="26.0" prefWidth="95.0" text="Browser" GridPane.rowIndex="1" />
             <TextField fx:id="browserField" prefHeight="26.0" prefWidth="143.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="pdfReaderField" prefHeight="26.0" prefWidth="143.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" onAction="#pdfReaderClicked" prefHeight="26.0" prefWidth="95.0" text="PDF Reader" GridPane.rowIndex="2" />
+            <Button fx:id="pdfButton" mnemonicParsing="false" onAction="#pdfReaderClicked" prefHeight="26.0" prefWidth="95.0" text="PDF Reader" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <Button layoutX="328.0" layoutY="253.0" mnemonicParsing="false" onAction="#cancelButtonClicked" prefHeight="26.0" prefWidth="70.0" text="Cancel" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
